plugins {
	id 'java'
}

def jdkExports = [
	"jdk.compiler/com.sun.tools.javac.api",
	"jdk.compiler/com.sun.tools.javac.file",
	"jdk.compiler/com.sun.tools.javac.util",
	"jdk.compiler/com.sun.tools.javac.tree",
	"jdk.compiler/com.sun.tools.javac.main",
	"jdk.compiler/com.sun.tools.javac.model",
	"jdk.compiler/com.sun.tools.javac.code",
	"jdk.compiler/com.sun.tools.javac.comp",
	"jdk.compiler/com.sun.tools.javac.jvm",
	"jdk.compiler/com.sun.tools.javac.processing",
	"java.base/jdk.internal.misc",
	"java.base/jdk.internal.reflect",
	"java.base/jdk.internal.module",
]

subprojects {
	apply plugin: 'java'

	group = 'com.github.I-hope1.mod-tools'
	version = '1.0.0'

	tasks.withType(JavaCompile).configureEach {
		sourceCompatibility = JavaVersion.VERSION_17
		targetCompatibility = JavaVersion.VERSION_17
		options.encoding = 'UTF-8'
		options.compilerArgs.addAll(jdkExports.collectMany { ["--add-exports", "${it}=ALL-UNNAMED"] })
	}
}
